# TMEmbed

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tumor_subtyper/: __init__.py  classifiers.py  cli.py  data.py  embedding.py  mock.py  pipeline.py
src/tumor_subtyper/.ipynb_checkpoints/: batch_correction-checkpoint.py  embedding-checkpoint.py
tests/: test_batch_correction.py  test_classifiers.py  test_data.py  test_embedding.py  test_pipeline.py
tutorial/: 01_mock_tcga_scvi_subtyping-Copy1.ipynb  01_mock_tcga_scvi_subtyping.ipynb  real_tcga_scvi_subtyping.ipynb
tutorial/.ipynb_checkpoints/: 01_mock_tcga_scvi_subtyping-Copy1-checkpoint.ipynb  01_mock_tcga_scvi_subtyping-checkpoint.ipynb  real_tcga_scvi_subtyping-checkpoint.ipynb
