[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "tumor-subtyper"
version = "0.1.0"
description = "Train tumor subtype classifiers on batch-corrected bulk-expression embeddings."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Tumor Subtyper contributors"}]
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
scvi = [
  "anndata>=0.10",
  "scanpy>=1.10",
  "scvi-tools>=1.1",
]
xgboost = ["xgboost>=2.0"]
all = [
  "anndata>=0.10",
  "scanpy>=1.10",
  "scvi-tools>=1.1",
  "xgboost>=2.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
tutorial = [
  "jupyterlab>=4.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "umap-learn>=0.5.6",
]

[project.scripts]
tumor-subtyper = "tumor_subtyper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tumor_subtyper"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
